--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,22 @@ body{
 	background-color: #EDECEF;
 }
 
-p, small{
+p, small, ul{
 	font-family: 'Quicksand', sans-serif;
+}
+
+a{
+	text-decoration: none;
+	color: #626981;
+}
+
+a:hover{
+	color: #3868C3;
+}
+
+.underscore{  
+	border-bottom: 0.3rem solid #3868C3;
+	padding-bottom: 0.3125rem;
 }
 
 /*TITLES*/
@@ -34,11 +48,14 @@ h1{
 
 h2, h3, h4, h5, h6, nav{
 	font-family: 'Nunito Sans', sans-serif;
-	font-weight: 100;
 }
 
 .uppercase{
 	text-transform: uppercase;
+}
+
+.specs-bold-100{
+	font-weight: 100;
 }
 
 .specs-bold-700{
@@ -56,11 +73,27 @@ h2, h3, h4, h5, h6, nav{
 }
 
 .separator-img1{
-
+	height: 30vh;
+	width: 100vw;
+	background: url(../imgs/mountains/olivier-miche.jpg) no-repeat center -200px fixed; 
+	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+	background-size: cover; /* version standardisée */
 }
 
 .separator-img2{
-	
+	height: 30px;
+	width: 100vw;
+	background: url(../imgs/mountains/thomas-tixtaaz02.jpg) no-repeat center -200px fixed; 
+	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+	background-size: cover; /* version standardisée */
+}
+
+.separator-img3{
+	height: 30px;
+	width: 100vw;
+	background: url(../imgs/woods/seth-williams.jpg) no-repeat center -200px fixed; 
+	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+	background-size: cover; /* version standardisée */
 }
 
 /*FLEX*/
@@ -81,10 +114,16 @@ h2, h3, h4, h5, h6, nav{
 	justify-content: flex-end;
 }
 
-.flex-container-right{
+.flex-container-left{
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
+}
+
+.flex-container-space-between{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .flex-wrap{
@@ -103,8 +142,8 @@ header{
 
 .div-name-header{
 	height: 80px;
-	background-color: #626981;
 	padding-left: 3%;
+	padding-right: 3%;
 	align-items: center;
 	color: #EDECEF;
 }
@@ -131,14 +170,17 @@ header{
 	color: #EDECEF;
 }
 
+.cheese{
+	height: 30px;
+	width: 30px;
+}
+
 /*NAV*/
 nav{
 	height: 4.375rem;
-	background-color: #626981;
-	opacity: 0.73;
 	position: sticky;
 	top: 0;
-	color: #EDECEF;
+	z-index: 999;
 
 }
 
@@ -153,7 +195,6 @@ nav ul li a{
 
 nav ul li a:hover{
 	font-weight: 400;
-	text-decoration: underline;
 }
 
 .border-li{
@@ -176,6 +217,44 @@ footer{
 /*LISTS*/
 
 /*SECTION*/
+.size-1{
+	font-size: 1.25rem;
+}
 
+/*PRESENTATION*/
+.text-presentation{
+	padding-top: 2.5rem;
+	width: 65%;
+}
+
+/*UNDERLINE FROM LEFT*/
+.hvr-underline-from-left {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px transparent;
+	position: relative;
+	overflow: hidden;
+}
+.hvr-underline-from-left:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	left: 0;
+	right: 100%;
+	bottom: 0;
+	background: #3868C3;
+	height: 4px;
+	-webkit-transition-property: right;
+	transition-property: right;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+	right: 0;
+}
 
 /*MEDIA QUERIES
